2003-04-18  Harald Harders  <h.harders@tu-bs.de>

	* docs/psdoc/ps_fontfile_doc.tex: Patch "[ 696421 ] Improved
	ps_fontfile_doc". Some text is modified, the symbol table now
	includes the octal and decimal numbers of the characters.

2003-04-18  Petr Mikulik  <mikulik@physics.muni.cz>

	* gnuplot.doc unset.c(reset_command): Remove "unset_loadpath()" from
	reset command. After discussion on gnuplot-beta list, the "reset"
	command should reset only graphics settings, while it should let
	unchanged non-graphics settings (like set term, out, loadpath and
	fontpath).

2003-04-13  Ethan Merritt <merritt@u.washington.edu>

	* src/term.c src/graphics.c: Correct a syntax error in test for terminal
	support of filled boxes.  This fixes reported crashes under MSWin.

	* src/gadgets.c src/mouse.c: Fix the same syntax error in other files
	also, although no crashes have been reported for these.

2003-04-13  Ethan Merritt <merritt@u.washington.edu>

	* term/gd.trm: Document that libgd will handle both TrueType
	and Adobe Type 1 fonts.

	* src/unset.c: Set tic label rotation to 0 on unset or reset.

2003-04-04  Ethan Merritt <merritt@u.washington.edu>

	* term/pslatex.trm term/epslatex.trm: Add filled box support.

	* term/eepic.trm: Fix broken parsing of terminal options.

	* term/pstricks.trm: Remove unused prototype PSTRICKS_previous_palette.

2003-04-04  Hans-Bernhard Broeker  <broeker@physik.rwth-aachen.de>

	* config/makefile.nt (winmain.obj): Don't repeat HELPFILE
 	definition --- already part of CFLAGS.

2003-04-04  Petr Mikulik  <mikulik@physics.muni.cz>

	* config/makefile.os2: Support for IPFC 2.1. Use temporary script file
	when creating allterm.h.

2003-04-03  Ethan Merritt <merritt@u.washington.edu>

	* src/term.c: Only test fill patterns on terminals that support it.

2003-04-01  Ethan Merritt <merritt@u.washington.edu>

	* term/gd.trm: Fix bugs in parsing terminal size and setting tic size.

2003-03-31  Ethan Merritt <merritt@u.washington.edu>
